fix: review comments
- make sure header is 96px like design
- vertical scrollbar no longer showing on desktop
- max width applied on desktop
- extra paddingX for header
- center logo vertically
- improve spacing on mobile sidebar by using links instead of buttons
- use css variables for theme setup
- move PageTabs indicator to top of tab

--- a/packages/ui/src/styles/layout.css
+++ b/packages/ui/src/styles/layout.css
@@ -31,7 +31,7 @@
   --dao-sidebar-width: 15rem;
 
   /* Header */
-  --header-height: 78px;
+  --header-height: 96px;
   --top-nav-height: 43px;
   --top-nav-bottom: 44px;
 
